<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="100dp"
        android:hint="Enter Plate Number"
        android:ems="10"
        android:inputType="text" />


    <Button
        android:id="@+id/startCameraSearch"
        android:layout_width="70pt"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
android:textSize="9pt"
        android:layout_marginTop="18dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editText2"
        android:text="@string/start_cameraSearch"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startCameraSearch">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:id="@+id/recyclerView_search"/>


    </RelativeLayout>

</RelativeLayout>